# devrules

./: .coverage  .devrules.toml.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  MANIFEST.in  README.md  coverage.xml  demo_dashboard.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.md  test_issues.py  test_tui.py
.custom_rules/: validate_migrations.py
.github/workflows/: docs.yml  pytest-coverage.yml
custom_example_rules/: validate_docstrings.py  validate_migrations.py  validate_no_breakpoints.py
decision-makers/commercial-license/: index.html
decision-makers/comparison/: index.html
developers/: index.html
developers/context-aware-docs-benefits/: index.html
developers/new-features/: index.html
docs/: .pages  CONTEXT_AWARE_DOCS_BENEFITS.md  ENTERPRISE_DISTRIBUTION.md  IMPLEMENTATION_COMPLETE.md  NEW_FEATURES.md  QUICK_REFERENCE.md  README.md  changelog.md  comparison.md  feature-gaps.md  implementation-summary.md  index.md  one-pager.md
docs/decision-makers/: commercial-license.md  index.md  license-change-summary.md  license.md  one-pager.md
docs/developers/: context-aware-docs-benefits.md  index.md  new-features.md  tui-readme.md
docs/enterprise/: enterprise-build.md  enterprise-distribution.md  index.md
docs/overview/: index.md
enterprise/enterprise-build/: index.html
enterprise/enterprise-distribution/: index.html
overview/: index.html
overview/changelog/: index.html
overview/one-pager/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
site/decision-makers/: index.html
site/decision-makers/comparison/: index.html
site/decision-makers/license/: index.html
site/decision-makers/license-change-summary/: index.html
site/decision-makers/one-pager/: index.html
site/developers/git-hooks-guide/: index.html
site/developers/quick-reference/: index.html
site/developers/scenario-context-aware-docs/: index.html
site/developers/tui-readme/: index.html
site/enterprise/: index.html
site/enterprise/enterprise-build/: index.html
site/overview/changelog/: index.html
site/search/: search_index.json
src/: __init__.py
src/devrules/: __init__.py  cli.py  config.py
src/devrules/cli_commands/: __init__.py  branch.py  build_cmd.py  commit.py  config_cmd.py  deploy.py  group.py  hook_commands.py  pr.py  project.py  rules.py
src/devrules/core/: deployment_service.py  git_service.py  github_service.py  permission_service.py  project_service.py  rules_engine.py
src/devrules/dtos/: github.py
src/devrules/enterprise/: builder.py
src/devrules/messages/: __init__.py
tests/: test_branch.py  test_commit.py  test_deployment.py  test_enterprise_build.py  test_git_service.py  test_permissions.py
tests/core/: conftest.py  test_deployment_service.py  test_events_engine.py  test_git_service.py  test_github_service.py  test_permission_service.py  test_rules_engine.py
tests/notifications/: test_slack_channel.py
tests/validators/: github_configs.json  test_branch.py  test_commit.py  test_documentation.py  test_forbidden_files.py  test_ownership.py  test_pr.py  test_pr_target.py  test_repo_state.py
(+27 files in other folders)
