[project]
name = "devrules"
version = "0.1.0"
description = "CLI tool for enforcing development guidelines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "toml>=0.10.2",
    "typer>=0.20.0",
]
authors = [
    {name = "Pedro Iván Fernández González", email = "pedroifgonzalez@gmail.com"}
]
keywords = ["git", "development", "rules", "cli", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "pytest-coverage>=0.0",
    "ruff>=0.14.5",
]


[project.scripts]
devrules = "devrules.cli:app"

[project.urls]
Homepage = "https://github.com/pedroifgonzalez/devrules"
Repository = "https://github.com/pedroifgonzalez/devrules"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
